# bazel-rust-grpc-aperture

./: .gitignore  Cargo.toml  DEVELOPMENT.md  README.md  WORKSPACE
.github/workflows/: ci.yaml
proto/: README.md
proto/aperture/: BUILD.bazel  Cargo.toml
proto/aperture/demo/: BUILD.bazel  task.proto
proto/aperture/demo/a/: BUILD.bazel  test.proto
proto/aperture/demo/a/b/: BUILD.bazel  test.proto
proto/aperture/demo/a/b/c/: BUILD.bazel  test.proto
proto/aperture/helloworld/: BUILD.bazel  helloworld.proto
proto/aperture/src/: lib.rs
server/: BUILD.bazel  Cargo.toml  README.md
server/src/: main.rs
tools/rust_proto/: BUILD.bazel  Cargo.toml  README.md  build.rs  index.bzl  rust_proto_library.bzl
tools/rust_proto/src/: lib.rs
