load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:private"])

filegroup(
    name = "proto_files",
    data = glob(["*.proto"]),
    visibility = ["//proto/aperture:__pkg__"],
)

proto_library(
    name = "helloworld_proto",
    srcs = ["helloworld.proto"],
    import_prefix = "aperture/helloworld",
    strip_import_prefix = "/proto/aperture/helloworld",
    deps = ["//proto/aperture/demo:demo_proto"],
    visibility = ["//proto/aperture:__pkg__"],
)
